[tool.poetry]
name = "repl_python3_Dandelionnew"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
discord = "^2.0.0"
yt-dlp = "^2022.10.4"
PyNaCl = "^1.5.0"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
