[tool.poetry]
name = "repl_python3_Dandelionnew"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
PyNaCl = "^1.5.0"
validators = "^0.20.0"
yt-dlp = "2023.3.4"
"discord.py" = "2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
